Wrote Ingredients and steps into shrimp-scampi.html

--- a/recipes/shrimp-scampi.html
+++ b/recipes/shrimp-scampi.html
@@ -9,5 +9,39 @@
 <body>
     <h1>Shrimp Scampi</h1>
     <img src="../images/shrimp-scampi.webp" alt="Shrimp Scampi">
+    <h2>Description</h2>
+    <p>A top rated seafood-pasta dish, that works with any type of pasta. 
+        This dish is ready to go in 40 minutes and serves up to six people!
+    </br>Which makes it perfect for your next dinner party.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Shrimp</li>
+        <li>Pasta: 16-ounce</li>
+        <li>Butter: unsalted</li>
+        <li>Extra-virgin olive</li>
+        <li>Shallots and garlic</li>
+        <li>White wine</li>
+        <li>Lemon juice</li>
+        <li>Seasonings</li>
+        <li>Parsley</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Bring a large pot of salted water to a boil;
+             cook linguine in boiling water until nearly tender,
+              6 to 8 minutes. Drain.
+        </li>
+        <li>Melt 2 tablespoons butter with 2 tablespoons olive oil in a large skillet over medium heat.
+             Cook and stir shallots, garlic, and red pepper flakes in the hot butter and oil until shallots
+              are translucent, 3 to 4 minutes. Season shrimp with kosher salt and black pepper; 
+              add to the skillet and cook until pink, stirring occasionally, 2 to 3 minutes. 
+              Remove shrimp from skillet and keep warm.
+        </li>
+        <li>Pour white wine and lemon juice into skillet and bring to a boil while scraping the browned bits of food
+             off of the bottom of the skillet with a wooden spoon. Melt 2 tablespoons butter in skillet, stir 2 tablespoons 
+             olive oil into butter mixture, and bring to a simmer. Toss linguine, shrimp, and parsley in the butter mixture 
+             until coated; season with salt and black pepper. Drizzle with 1 teaspoon olive oil to serve.
+        </li>
+    </ol>
 </body>
 </html>
