--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/shrimp-scampi.html">Shrimp Scampi</a>
+    <ul>
+        <li><a href="recipes/shrimp-scampi.html">Shrimp Scampi</a></li>
+        <li><a href="recipes/brownies.html">Brownies</a></li>
+    </ul>
     
 </body>
 </html>
