--- a/recipes/shrimp-scampi.html
+++ b/recipes/shrimp-scampi.html
@@ -27,21 +27,21 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Bring a large pot of salted water to a boil;
+        <li><p>Bring a large pot of salted water to a boil;
              cook linguine in boiling water until nearly tender,
               6 to 8 minutes. Drain.
-        </li>
-        <li>Melt 2 tablespoons butter with 2 tablespoons olive oil in a large skillet over medium heat.
+        </p></li>
+        <li><p>Melt 2 tablespoons butter with 2 tablespoons olive oil in a large skillet over medium heat.
              Cook and stir shallots, garlic, and red pepper flakes in the hot butter and oil until shallots
               are translucent, 3 to 4 minutes. Season shrimp with kosher salt and black pepper; 
               add to the skillet and cook until pink, stirring occasionally, 2 to 3 minutes. 
               Remove shrimp from skillet and keep warm.
-        </li>
-        <li>Pour white wine and lemon juice into skillet and bring to a boil while scraping the browned bits of food
+        </p></li>
+        <li><p>Pour white wine and lemon juice into skillet and bring to a boil while scraping the browned bits of food
              off of the bottom of the skillet with a wooden spoon. Melt 2 tablespoons butter in skillet, stir 2 tablespoons 
              olive oil into butter mixture, and bring to a simmer. Toss linguine, shrimp, and parsley in the butter mixture 
              until coated; season with salt and black pepper. Drizzle with 1 teaspoon olive oil to serve.
-        </li>
+        </p></li>
     </ol>
 </body>
 </html>
