--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/shrimp-scampi.html">Shrimp Scampi</a></li>
         <li><a href="recipes/brownies.html">Brownies</a></li>
+        <li><a href="recipes/blueberry-buckle.html">Blueberry Buckle</a></li>
     </ul>
     
 </body>
