--- a/recipes/blueberry-buckle.html
+++ b/recipes/blueberry-buckle.html
@@ -13,15 +13,32 @@
     <p>A vesatile coffee-like cake dessert </p>
     <h2>Ingredients</h2>
     <ul>
-        <li><p></p></li>
-        <li><p></p></li>
-        <li><p></p></li>
-        <li><p></p></li>
-        <li><p></p></li>
-        <li><p></p></li>
-        <li><p></p></li>
-        <li><p></p></li>
+        <li><p>3/4 cup white sugar</p></li>
+        <li><p>1/4 cup white sugar</p></li>
+        <li><p>1 large egg</p></li>
+        <li><p>2 cups all-purpose flour</p></li>
+        <li><p>2 teaspoons baking powder</p></li>
+        <li><p>1/2 teaspoon salt</p></li>
+        <li><p>1/2 cup milk</p></li>
+        <li><p>2 cups fresh blueberries</p></li>
     </ul>
+    <h2>Toppings</h2>
+    <ul>
+        <li><p>1/2 cup white sugar</p></li>
+        <li><p>1/3 cup all-purpose flour</p></li>
+        <li><p>1/4 cup butter, softend</p></li>
+        <li><p>1/2 teaspoon ground cinnamon</p></li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><p>Preheat the oven to 375 degrees F (190 degrees C). Grease an 8x8-inch pan.</p></li>
+        <li><p>Cream sugar, shortening, and egg in a large bowl until light and fluffy. </p></li>
+        <li><p>Stir together flour, baking powder, and salt in a separate bowl.</p></li>
+        <li><p>Add flour mixture to sugar mixture in 2 batches, alternating with milk, beating batter briefly after each addition.</p></li>
+        <li><p>Fold in blueberries. Pour into prepared pan</p></li>
+        <li><p>Make topping: Combine sugar, flour, butter, and cinnamon in a bowl; mix with your hands until crumbly. Sprinkle over cake batter.</p></li>
+        <li><p>Bake in the preheated oven until a toothpick inserted into the center comes out clean, 25 to 30 minutes.</p></li>
+    </ol>
 
 </body>
 </html>
