--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin's Taste Of Valhalla</h1>
+    <img src="./images/odin.webp" alt="Odin">
+    <h2>Some of Odins favorite dishes</h2>
     <ul>
         <li><a href="recipes/shrimp-scampi.html">Shrimp Scampi</a></li>
         <li><a href="recipes/brownies.html">Brownies</a></li>
