--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin's Taste Of Valhalla</h1>
+    <div class="header">
+        <h1>Odin's Taste Of Valhalla</h1>
+    </div>
+   <div>
     <img src="./images/odin.webp" alt="Odin">
-    <h2>Some of Odins favorite dishes</h2>
+   </div>
+    <div class="center">
+        <h2>Some of Odins favorite dishes</h2>
     <ul>
         <li><a href="recipes/shrimp-scampi.html">Shrimp Scampi</a></li>
         <li><a href="recipes/brownies.html">Brownies</a></li>
         <li><a href="recipes/blueberry-buckle.html">Blueberry Buckle</a></li>
     </ul>
+    </div>
     
 </body>
 </html>
